copy edit ccd notebook 03-02

--- a/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
+++ b/notebooks/03-02-Real-dark-current-noise-and-other-artifacts.ipynb
@@ -14,7 +14,7 @@
     "The dark current on modern CCDs, even relatively inexpensive ones, is very\n",
     "small. In a typical exposure the dark current is likely smaller, maybe much\n",
     "smaller, than the read noise. Despite that, it is worth examining some dark\n",
-    "frames from your camera. because not all pixels have the same dark current.\n",
+    "frames from your camera because not all pixels have the same dark current.\n",
     "Some, called hot pixels, have much higher dark current than the rest of the\n",
     "sensor. Some sensors have non-astronomical sources of counts whose value are\n",
     "proportional to exposure time, like dark current, but whose origin is nonthermal\n",
@@ -76,13 +76,13 @@
     "\n",
     "### What if that isn't possible?\n",
     "\n",
-    "Do your best. The darks from the Large Format Camera were take as part of a\n",
+    "Do your best. The darks from the Large Format Camera were taken as part of a\n",
     "science run in which there was limited time for taking dark frames. The key\n",
-    "thing to keep in mind is the lower limit on the dark current you can measure\n",
+    "thing to keep in mind is the lower limit on the dark current you can measure,\n",
     "given the read noise and exposure time.\n",
     "\n",
     "The darks in Case 2 were taken with a new camera that was not yet mounted on the\n",
-    "telescope as part of commissioning the camera. That made taking over 5 hours of\n",
+    "telescope as part of commissioning the camera. That made taking over five hours of\n",
     "dark frames more feasible!"
    ]
   },
@@ -124,14 +124,14 @@
     "t_\\text{dark, min} = \\frac{11 e^-/\\text{pixel}}{0.01 e^-/\\text{sec/pixel}} = 1100~\\text{sec}.\n",
     "$$\n",
     "\n",
-    "Even that leaves us with an image that dominated by read noise rather than dark\n",
+    "Even that leaves us with an image dominated by read noise rather than dark\n",
     "current. Combining 100 of those images would reduce the read noise by a factor\n",
     "of 10, which would be ideal for precisely measuring the dark current in each\n",
     "pixel. Unfortunately, taking over 30 hours of dark images is not feasible.\n",
     "\n",
     "Instead, we will work with what we have for this camera: three dark images, each\n",
-    "300 seconds. This places a lower limit on the dark current we can measure -- we\n",
-    "will only be able to measure the dark current for fairly \"hot\" pixels -- but it\n",
+    "300 seconds. This places a lower limit on the dark current we can measure — we\n",
+    "will only be able to measure the dark current for fairly \"hot\" pixels — but it\n",
     "at least gives us some idea of the dark properties of the camera.\n",
     "\n",
     "Another way to phrase this is much more positive: for most of the pixels in the\n",
@@ -205,7 +205,7 @@
     "\n",
     "The histogram below shows dark current along the horizontal axis and the number\n",
     "of pixels in the CCD with that dark current along the vertical axis. Since there\n",
-    "is obvious sensor glow in the darks three distributions are shown:\n",
+    "is obvious sensor glow in the darks, three distributions are shown:\n",
     "\n",
     "+ The full sensor, which at first glance has some pixels with dark current as\n",
     "high as 10 $e^-$/sec.\n",
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case 2: Thermo-electrically cooled camera"
+    "## Case 2: Thermoelectrically-cooled camera"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "noise\" limit in the previous notebook about ideal dark current.\n",
     "\n",
     "Measuring the dark current once you have the images is relatively\n",
-    "straightforward: subtract the bias, multiply the result by the gain and then\n",
+    "direct: subtract the bias, multiply the result by the gain, and then\n",
     "divide by the exposure time to obtain the dark current in $e^-$/pixel/sec."
    ]
   },
@@ -375,8 +375,8 @@
     "can occur even in cryogenically-cooled cameras.\n",
     "\n",
     "The vast majority of the pixels in the image have a dark current around the\n",
-    "value promised by the manufacturer, 0.01 $e^-$/sec; the highest nominally have\n",
-    "dark current 98 $e^-$/sec.\n",
+    "value promised by the manufacturer, 0.01 $e^-$/sec; the highest nominally have a\n",
+    "dark current of 98 $e^-$/sec.\n",
     "\n",
     "However, there is  an upper limit to the dark current that can be measured in a\n",
     "particular exposure because the CCD saturates once the counts become large\n",
@@ -396,7 +396,7 @@
     "on the camera. For this camera, the linearity limit is around 55,000 counts,\n",
     "corresponding to a dark current of roughly  82 $e^-$/sec.\n",
     "\n",
-    "One can, in principle, also check whether the hot pixels have a constant dark\n",
+    "You can, in principle, also check whether or not the hot pixels have a constant dark\n",
     "current that does not change with time by creating a number of these darks at\n",
     "different exposure times and plotting the dark current as a function of exposure\n",
     "time for the hot pixels. If the dark current is constant then the dark counts\n",
@@ -429,7 +429,7 @@
    "source": [
     "## How to handle hot pixels\n",
     "\n",
-    "There are a few ways one could handle this, which can be used in combination\n",
+    "There are a few ways you could handle this, which can be used in combination\n",
     "with each other:\n",
     "\n",
     "+ Mark all pixels above some threshold as bad and create a mask to keep track of\n",
@@ -445,7 +445,7 @@
     "## One thing NOT to do\n",
     "\n",
     "Do not take short dark frames and scale them up to longer exposure times. Modern\n",
-    "cameras, even thermo-electrically cooled ones, have very low dark current. If\n",
+    "cameras, even thermoelectrically-cooled ones, have very low dark current. If\n",
     "your dark frames have low exposure time then most of the pixels are measuring\n",
     "read noise, not dark current. If you rescale those images to a longer exposure\n",
     "time then you inappropriately amplify that noise. Ideally, the expected dark\n",
