copy edit ccd notebook 03-04

--- a/notebooks/03-04-Handling-overscan-and-bias-for-dark-frames.ipynb
+++ b/notebooks/03-04-Handling-overscan-and-bias-for-dark-frames.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "If you decide to subtract the overscan from *any* of the images used in your\n",
     "data reduction then you must subtract overscan from *all* of the images. This\n",
-    "includes the darks, and is independent of whether you intend to scale the dark\n",
+    "includes the darks, and is independent of whether or not you intend to scale the dark\n",
     "frames to other exposure times.\n",
     "\n",
     "Use [`ccdproc.subtract_overscan`](https://ccdproc.readthedocs.io/en/latest/ccdproc/reduction_toolbox.html#overscan-subtraction) to remove the overscan. See the notebook XX\n",
