copy edit ccd notebook 03-05

--- a/notebooks/03-05-Calibrate-dark-images.ipynb
+++ b/notebooks/03-05-Calibrate-dark-images.ipynb
@@ -7,13 +7,13 @@
     "# Calibrate dark images\n",
     "\n",
     "Dark images, like any other images, need to be calibrated. Depending on the data\n",
-    "you have and the choices you have made in reducing your data the steps to\n",
+    "you have and the choices you have made in reducing your data, the steps to\n",
     "reducing your images may include:\n",
     "\n",
     "1. Subtracting overscan (only if you decide to subtract overscan from all\n",
-    "images)\n",
+    "images).\n",
     "2. Trim the image (if it has overscan, whether you are using the overscan or\n",
-    "not)\n",
+    "not).\n",
     "3. Subtract bias (if you need to scale the calibrated dark frames to a different\n",
     "exposure time)."
    ]
@@ -105,10 +105,10 @@
     "\n",
     "This example is, again, one of the chips of the LFC camera at Palomar. In\n",
     "earlier notebooks we have seen that the chip has a useful overscan region\n",
-    "(LINK), has little dark current except for some hot pixels and sensor glow in\n",
+    "(LINK), has little dark current except for some hot pixels, and sensor glow in\n",
     "one corner of the chip.\n",
     "\n",
-    "Looking at the list of non-dark images (i.e. the flat and light images) shows\n",
+    "Looking at the list of non-dark images (i.e., the flat and light images) shows\n",
     "that for each exposure time in the non-dark images there is a set of dark\n",
     "exposures that has a matching, or very close to matching, exposure time.\n",
     "\n",
@@ -123,7 +123,7 @@
     "\n",
     "1. Subtract overscan from each of the darks. The useful overscan region is XXX\n",
     "(see LINK).\n",
-    "2. Trim the overscan out of the dark images\n",
+    "2. Trim the overscan out of the dark images.\n",
     "\n",
     "We will *not* subtract bias from these images because we will *not* need to\n",
     "rescale them to a different exposure time."
@@ -219,11 +219,11 @@
     "\n",
     "In this case the only dark frames have exposure time 90 sec. Though that matches\n",
     "the exposure time of the science images, the flat field images are much shorter\n",
-    "exposure time, ranging from 1 sec to 1.21 sec. That type range of exposure is\n",
-    "typical when twilights flats are taken. Since these are a much different\n",
+    "exposure time, ranging from 1 sec to 1.21 sec. This type of range of exposure is\n",
+    "typical when twilight flats are taken. Since these are a much different\n",
     "exposure time than the darks, the dark frames will need to be scaled.\n",
     "\n",
-    "Recall that for this camera the overscan is not useful and should simply be\n",
+    "Recall that for this camera the overscan is not useful and should be\n",
     "trimmed off.\n",
     "\n",
     "Given this, we will:\n",
