copy edit ccd notebook 03-06

--- a/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
+++ b/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.ipynb
@@ -66,11 +66,11 @@
     "+ An object-oriented interface built around the `Combiner` object, described in\n",
     "the [ccdproc documentation on image combination]().\n",
     "+ A function called `combine`, which we will use here because the function\n",
-    "allows one to specify the maximum amount of memory that should be used during\n",
+    "allows you to specify the maximum amount of memory that should be used during\n",
     "combination. That feature can be essential depending on how many images you need\n",
     "to combine, how big they are, and how much memory your computer has.\n",
     "\n",
-    "*NOTE: If using a version of ccdproc lower than 2.0 set the memory limit a\n",
+    "*NOTE: If using a version of ccdproc lower than 2.0, set the memory limit a\n",
     "factor of 2-3 lower than you want the maximum memory consumption to be.*"
    ]
   },
@@ -78,15 +78,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: cryogenically-cooled camera"
+    "## Example 1: Cryogenically-cooled camera"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The remained of this section assumes the calibrated bias images are in the\n",
-    "folder `example1-reduced` which is created in the previous notebook."
+    "The remainder of this section assumes that the calibrated bias images are in the\n",
+    "folder `example1-reduced` which was created in the previous notebook."
    ]
   },
   {
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: Thermo-electrically cooled camera\n",
+    "## Example 2: Thermoelectrically-cooled camera\n",
     "\n",
     "The process for combining the images is exactly the same as in example 1. The\n",
     "only difference is the directory that contains the calibrated bias frames."
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Despite the fact that there is only one exposure time we might as well re-use\n",
+    "Despite the fact that there is only one exposure time, we might as well reuse\n",
     "the code from above."
    ]
   },
@@ -278,7 +278,7 @@
    "metadata": {},
    "source": [
     "The difference between a single calibrated bias image and the combined bias\n",
-    "image is miuch clearer in this case."
+    "image is much clearer in this case."
    ]
   },
   {
