copy edit ccd notebook 05-00

--- a/notebooks/05-00-Flat-corrections.ipynb
+++ b/notebooks/05-00-Flat-corrections.ipynb
@@ -35,23 +35,22 @@
    "source": [
     "## What are flat corrections?\n",
     "\n",
-    "The purpose of flat corrections is to compensate for any non-uniformity in the\n",
+    "The purpose of flat corrections is to compensate for any nonuniformity in the\n",
     "response of the CCD to light. There can be several reasons that the response is\n",
     "not uniform across the detector:\n",
     "\n",
-    "+ variations in the sensitivity of pixels in the detector, though this source is\n",
+    "+ Variations in the sensitivity of pixels in the detector, though this source is\n",
     "usually small.\n",
-    "+ dust on either the filter or the glass window covering the detector.\n",
-    "+ vignetting, a dimming in the corners of the image.\n",
-    "+ anything else in the optical path that affects how much light reaches the\n",
+    "+ Dust on either the filter or the glass window covering the detector.\n",
+    "+ Vignetting, a dimming in the corners of the image.\n",
+    "+ Anything else in the optical path that affects how much light reaches the\n",
     "sensor.\n",
     "\n",
-    "The fix for the non-uniformity is the same in all cases: take an image in which\n",
+    "The fix for nonuniformity is the same in all cases: take an image in which\n",
     "the illumination is uniform and use that to measure the response of the CCD.\n",
     "\n",
     "Unfortunately, achieving uniform illumination is difficult, and uniform\n",
-    "illumination with the same spectrum as the astronomical objects of interest to\n",
-    "you is impossible."
+    "illumination with the same spectrum as the astronomical objects of interest is impossible."
    ]
   },
   {
@@ -93,14 +92,14 @@
     "normalizing (also called rescaling) the calibrated flat frames to a common mean\n",
     "or median before combining them. In both sky and twilight flats the illumination\n",
     "varies naturally from frame-to-frame. If the images are not scaled to a common\n",
-    "value before combining then the ones taken while the sky is brighter will\n",
-    "inappropriately dominate the result. Dome flats ought, in principle, be\n",
+    "value before combining, then the ones taken while the sky is brighter will\n",
+    "inappropriately dominate the result. Dome flats ought to be, in principle,\n",
     "perfectly stable with no time variation in their illumination. In practice,\n",
     "every light source varies at some level; if you are trying to correct 1%\n",
-    "differences in illumination then 1% fluctuations in the light source matter.\n",
+    "differences in illumination, then 1% fluctuations in the light source matter.\n",
     "\n",
     "Typically the mean or median is scaled to 1.0 before combining so that when the\n",
-    "science images are divided by the calibrated, combined flats the science image\n",
+    "science images are divided by the calibrated, combined flats, the science image\n",
     "values do not change too much."
    ]
   }
