copy edit ccd notebook 05-03

--- a/notebooks/05-03-Calibrating-the-flats.ipynb
+++ b/notebooks/05-03-Calibrating-the-flats.ipynb
@@ -6,22 +6,22 @@
    "source": [
     "# Calibrating the flats\n",
     "\n",
-    "Recall that the counts in an astronomical image include dark current, noise and\n",
-    "a nearly-constant offset, the bias. The individual flat frames need to have bias\n",
+    "Recall that the counts in an astronomical image include dark current, noise, and\n",
+    "a near-constant offset, the bias. The individual flat frames need to have bias\n",
     "and dark removed from them. Depending on the exposure times of the images you\n",
     "have, you may or may not need to subtract dark and bias separately.\n",
     "\n",
-    "If the combined dark frame needs to be scaled to a different exposure time then\n",
+    "If the combined dark frame needs to be scaled to a different exposure time, then\n",
     "bias and dark must be handled separately; otherwise, the dark and bias can be\n",
     "removed in a single step because dark frames also include bias.\n",
     "\n",
     "The potential reduction steps for flat frames are below:\n",
     "\n",
-    "+ Subtract overscan and trim, if necessary\n",
-    "+ Subtract bias, if necessary\n",
-    "+ Subtract dark current, scaling if necessary (scale down when possible)\n",
+    "+ Subtract overscan and trim, if necessary.\n",
+    "+ Subtract bias, if necessary.\n",
+    "+ Subtract dark current, scaling if necessary (scale down when possible).\n",
     "\n",
-    "As in the chapters about bias and dark we will work through two example. In\n",
+    "As in the chapters about bias and dark we will work through two examples. In\n",
     "Example 1 the darks are not scaled and the overscan region is used as part of\n",
     "the calibration. In Example 2 the darks are scaled and the overscan region is\n",
     "trimmed off without being used."
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: no scaling of dark frames\n",
+    "## Example 1: No scaling of dark frames\n",
     "\n",
     "The images for this example are from chip 0 of the Large Format Camera at\n",
     "Palomar Observatory. The raw images are at XXX, and this notebook assumes that\n",
@@ -125,7 +125,7 @@
     "called `example1-reduced` in the same folder as this notebook.\n",
     "\n",
     "We'll go through this example twice: once with a single image to explain each\n",
-    "step, then processing all of the flat frames in the directory of raw data.\n",
+    "step, and then again to process all of the flat frames in the directory of raw data.\n",
     "\n",
     "An image collection is defined below, along with a couple of settings useful for\n",
     "this example."
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The raw data should be in the directory `example-cryo-LFC`"
+    "The raw data should be in the directory `example-cryo-LFC`."
    ]
   },
   {
@@ -215,8 +215,8 @@
    "metadata": {},
    "source": [
     "There is not a lot of variation in this. Note that the overscan region on the\n",
-    "right stands out as a black bar, and that there is apparently also an overscan\n",
-    "region across the top of the chip. There appears to be a slight variaion in\n",
+    "right stands out as a black bar, and there is apparently also an overscan\n",
+    "region across the top of the chip. There appears to be a slight variation in\n",
     "pixel values from the bottom to the top of the image."
    ]
   },
@@ -254,8 +254,8 @@
    "metadata": {},
    "source": [
     "Trimming off the overscan makes such a big difference primarily because the\n",
-    "image stretch changed; the lowest pixel values are now around 18000 instead of\n",
-    "2000. With that change the non-uniformity across the detector is much clearer."
+    "image stretch changed; the lowest pixel values are now around 18000 instead of \n",
+    "2000. With that change, the nonuniformity across the detector is much clearer."
    ]
   },
   {
@@ -264,7 +264,7 @@
    "source": [
     "### Subtracting bias is not necessary in this example\n",
     "\n",
-    "For this particular set of images there are darks with exposure time 7, 70 and\n",
+    "For this particular set of images there are darks with exposure time 7, 70, and\n",
     "300 sec. The flat images have the exposure times listed below:"
    ]
   },
@@ -293,7 +293,7 @@
     "### Subtract dark current, no scaling necessary in this example\n",
     "\n",
     "We need to subtract the dark without scaling it. Rather than manually figuring\n",
-    "out which dark to subtract we use the dark frame closest in exposure time to the\n",
+    "out which dark to subtract, we use the dark frame closest in exposure time to the\n",
     "flat, within a tolerance of 1 second to ensure that we do not end up using a\n",
     "dark *too* far off in exposure time from the flat.\n",
     "\n",
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calibrated all of the flats in the folder"
+    "### Calibrate all of the flats in the folder"
    ]
   },
   {
@@ -403,11 +403,11 @@
     "## Example 2: Dark frames are scaled\n",
     "\n",
     "The images in this example, like in the previous notebooks, is a\n",
-    "thermo-electrically cooled CCD described in more detail in the\n",
+    "thermoelectrically-cooled CCD described in more detail in the\n",
     "[overscan notebook](01-08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M).\n",
     "\n",
     "We'll go through this example twice: once with a single image to explain each\n",
-    "step, then processing all of the flat frames in the directory of raw data.\n",
+    "step, and then again to process all of the flat frames in the directory of raw data.\n",
     "\n",
     "An image collection is defined below, along with a couple of settings useful for\n",
     "this example."
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The raw data should be in the directory `example-thermo-electric`"
+    "The raw data should be in the directory `example-thermo-electric`."
    ]
   },
   {
@@ -562,11 +562,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are quite different than the exposure time of the dark frames so the dark\n",
+    "These are quite different than the exposure time of the dark frames, so the dark\n",
     "will need to be scaled by exposure time, which means that the bias has been\n",
     "removed from the combined dark.\n",
     "\n",
-    "Because of that, the bias needs to be removed the flat before subtracting the\n",
+    "Because of that, the bias needs to be removed from the flat before subtracting the\n",
     "dark."
    ]
   },
@@ -667,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calibrated all of the flats in the folder"
+    "### Calibrate all of the flats in the folder"
    ]
   },
   {
