copy edit ccd notebook 05-04

--- a/notebooks/05-04-Combining-flats.ipynb
+++ b/notebooks/05-04-Combining-flats.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Combining flats\n",
     "\n",
-    "There is one step in combining flats that is different than for most other image\n",
+    "There is one step in combining flats that is different from most other image\n",
     "combination: the flats should be scaled to a common value before combining them.\n",
     "This is particularly important if the flats are twilight flats in which the\n",
     "average image value typically changes significantly as the images are being\n",
@@ -92,7 +92,7 @@
    "metadata": {},
    "source": [
     "These flats are dome flats, essentially pictures of a screen in the dome\n",
-    "illuminated by a light source, so one would not expect there to be much variable\n",
+    "illuminated by a light source, so you would not expect there to be much variable\n",
     "in the typical pixel value between different exposures. There is typically\n",
     "*some* variation, though, so we graph it below."
    ]
@@ -127,7 +127,7 @@
     "Typically it is better to use the median because extreme values do not affect\n",
     "the median as much as the mean.\n",
     "\n",
-    "To scale the frames so that they have the same median value we need to define a\n",
+    "To scale the frames so that they have the same median value, we need to define a\n",
     "function that can calculate the inverse of the median given the data."
    ]
   },
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That looks good. Two two flats are displayed below."
+    "That looks good. The two flats are displayed below."
    ]
   },
   {
@@ -231,7 +231,7 @@
     "small dark spots are places where the chip wasn't thinned uniformly.\n",
     "\n",
     "Compare this with [Example 2](#Discussion-of-Example-2) below, which shows a flat\n",
-    "taken with a front-side illuminated camera."
+    "taken with a frontside-illuminated camera."
    ]
   },
   {
@@ -240,7 +240,7 @@
    "source": [
     "## Example 2\n",
     "\n",
-    "The data in this example is from a thermo-electrically cooled Andor Aspen CG16M.\n",
+    "The data in this example is from a thermoelectrically-cooled Andor Aspen CG16M.\n",
     "These flats are twilight flats, taken just after sunset."
    ]
   },
@@ -271,7 +271,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Twilight flats typically differ more from frame-to-frame than dome flats, as\n",
+    "Twilight flats typically differ more frame-to-frame than dome flats, as\n",
     "shown in the figure below."
    ]
   },
@@ -364,8 +364,8 @@
    "metadata": {},
    "source": [
     "This flat looks very different than the one in [Example 1](#Discussion-of-Example-1)\n",
-    "because this CCD is front-side illuminated and the previous one is back-side\n",
-    "illuminated. That means the sensor is on the top of the chip and the light does\n",
+    "because this CCD is frontside-illuminated and the previous one is backside-illuminated. \n",
+    "That means the sensor is on the top of the chip and the light does\n",
     "not pass through the sensor chip itself to reach the sensors. Though only one\n",
     "filter is shown here, the flat field looks slightly different through other\n",
     "filters on this camera."
