copy edit ccd notebook 07-00

--- a/notebooks/07-00-Combining-images.ipynb
+++ b/notebooks/07-00-Combining-images.ipynb
@@ -7,7 +7,7 @@
     "# Combining images\n",
     "\n",
     "An overview of combining images is in [Image combination](01-06-Image-combination.ipynb). The next\n",
-    "sections discuss a couple of common cases not covered the earlier section:\n",
+    "sections discuss a couple of common cases not covered in the earlier section:\n",
     "\n",
     "+ Combining science images without aligning them to generate *sky flats*. These\n",
     "flats have the advantage that the light source exactly matches the spectrum of\n",
