copy edit ccd notebook 08-01

--- a/notebooks/08-01-Identifying-hot-pixels.ipynb
+++ b/notebooks/08-01-Identifying-hot-pixels.ipynb
@@ -19,17 +19,17 @@
     "counts in a dark image should be proportional to the exposure time.\n",
     "\n",
     "For some hot pixels that is not the case, unfortunately, which means that those\n",
-    "pixels cannot easily be corrected by subtracting a combined dark. Those pixels\n",
+    "pixels cannot conveniently be corrected by subtracting a combined dark. Those pixels\n",
     "can be identified by taking darks with two different (but long) exposure times\n",
     "and comparing the dark current derived from each of the images. The dark\n",
     "current, measured in electron/sec, should be the same in both images if the dark\n",
     "current is really constant.\n",
     "\n",
     "Fortunately, the pixels whose response is not proportional to exposure time are\n",
-    "usually also pixels with high dark current. It is straightforward to identify\n",
+    "usually also pixels with high dark current. It is possible to identify\n",
     "those pixels and create a mask to exclude them when processing images. If this\n",
     "weren't the case it might be necessary to take some dark frames with much longer\n",
-    "exposure time than otherwise needed."
+    "exposure times than otherwise needed."
    ]
   },
   {
@@ -69,8 +69,8 @@
     "There are two combined dark images available for the thermoelectrically-cooled\n",
     "Andor Aspen CG16M discussed as \"Example 2\" in previous notebooks. One is an\n",
     "average of ten 90 second exposures taken during observations of the transiting\n",
-    "exoplanet Kelt 16b. The other is an average of twenty 1,000 second exposures\n",
-    "taken during commission of the camera. Typically one will not have a single dark\n",
+    "exoplanet KELT-16 b. The other is an average of twenty 1,000 second exposures\n",
+    "taken during commission of the camera. Typically you will not have a single dark\n",
     "of with an exposure time that long, let alone several of them."
    ]
   },
@@ -112,18 +112,18 @@
     "The histogram below shows the distribution of dark current values in each image.\n",
     "There are some differences we should *expect* to see between the two images.\n",
     "\n",
-    "Small values of dark current r much more accurately measured in the long\n",
+    "Small values of dark current are much more accurately measured in the long\n",
     "exposure. The exposure time in that image was chosen to be as short as possible\n",
     "while still measuring the nominal dark current of 0.01 $e^-$/sec from the\n",
     "manufacturer given that the camera's read noise is 10$e^-$.\n",
     "\n",
     "For the average of ten 90 second exposures, that read noise will be reduced to\n",
-    "10$e^-/\\sqrt{10} \\approx$3.2$e^-$. After dividng by exposure time this is\n",
+    "10$e^-/\\sqrt{10} \\approx$3.2$e^-$. After dividng by exposure time, this is\n",
     "equivalent to a \"dark current\" of 0.035$e^-$/sec. Roughly twice that is the\n",
     "smallest dark current that can be accurately measured in the 90 second dark.\n",
     "\n",
-    "For large values of dark current the shorter exposure is more accurate. Some of\n",
-    "the pixels saturate (i.e. reach the maximum value the chip can read out, roughly\n",
+    "For large values of dark current, the shorter exposure is more accurate. Some of\n",
+    "the pixels saturate (i.e., reach the maximum value the chip can read out, roughly\n",
     "65,000) in under 90 sec and more of them saturate at some time between 90\n",
     "seconds and 1,000 seconds. None of those pixels are accurately measured by the\n",
     "long 1,000 second exposure time."
@@ -150,12 +150,12 @@
    "metadata": {},
    "source": [
     "Overall, there appear to be more hot pixels in the 90 sec exposure than in the\n",
-    "1,000 sec exposure. For dark current under 0.1 $e^-$/sec that is certainly\n",
+    "1,000 sec exposure. For dark current under 0.1 $e^-$/sec, that is certainly\n",
     "affected by the read noise in the 90 sec exposure.\n",
     "\n",
-    "To get a better idea of how consistent the dark current measurements are we\n",
+    "To get a better idea of how consistent the dark current measurements are, we\n",
     "construct a scatter plot with the measured dark current from each image for\n",
-    "those pixels in whihc the dark current is larger than 1$e^-$/sec as measured in\n",
+    "those pixels in which the dark current is larger than 1$e^-$/sec as measured in\n",
     "the longer exposure."
    ]
   },
@@ -254,17 +254,17 @@
     "you have a few options:\n",
     "\n",
     "+ Use whatever exposure time range you have. The images in \"Example 1\" from the\n",
-    "previous notebook have darks with exposure times 7, 70 and 300 seconds. The 7\n",
+    "previous notebook have darks with exposure times 7, 70, and 300 seconds. The 7\n",
     "second dark is primarily measuring read noise, so is not likely to be useful.\n",
     "The current in the 70 second and 300 second darks could be compared, though, as\n",
     "it was in this case.\n",
-    "+ If that is not an option, as was the case in the data in \"Example 2\", then you\n",
-    "may need to pick a cut off. Keep in mind that the typical camera has very, very\n",
+    "+ If that is not an option, as was the case with the data in \"Example 2,\" then you\n",
+    "may need to pick a cutoff. Keep in mind that the typical camera has very, very\n",
     "low dark current, so a limit like 1$e^-$/sec is not unreasonable.\n",
     "+ Ask other users of the instrument what they do. Large observatories may\n",
-    "provide a a mask image of bad pixels for the camera you are using.\n",
+    "provide a mask image of bad pixels for the camera you are using.\n",
     "+ Do not do any masking. This is a more reasonable option than you might think.\n",
-    "Most pixels are measuring light from the night time sky. If one of these hot\n",
+    "Most pixels are measuring light from the nighttime sky. If one of these hot\n",
     "pixels happens to be in that background, and outlying pixels are rejected by a\n",
     "method like sigma clipping, then these hot pixels will be excluded from your\n",
     "analysis. If the object of interest happens to fall on one the bad pixels you\n",
