copy edit ccd notebook 08-02

--- a/notebooks/08-02-Creating-a-mask.ipynb
+++ b/notebooks/08-02-Creating-a-mask.ipynb
@@ -17,8 +17,8 @@
     "in the combined calibrated frames with the proper choice of combination\n",
     "parameters, they are not removed from science images.\n",
     "\n",
-    "The first three are discussed in this notebook. Removal of cosmic rays from\n",
-    "science images is discussed [in the cosmic ray notebook]()"
+    "The first three points are discussed in this notebook. Removal of cosmic rays from\n",
+    "science images is discussed [in the cosmic ray notebook]()."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is\n",
+    "The `ccdproc` function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses a method that is\n",
     "based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the\n",
     "input image used to detect flaws in the CCD is the ratio of two flat frames with\n",
     "different counts. That may or may not be available depending on what images are\n",
@@ -74,7 +74,7 @@
     "counts in the images differ by 10,000. These were twilight flats taken just\n",
     "after sunset.\n",
     "\n",
-    "Even with dome flats where the illumination is supposed to be constant the\n",
+    "Even with dome flats where the illumination is supposed to be constant, the\n",
     "counts may actually vary. If they do not, use a single flat for identifying bad\n",
     "pixels instead of a ratio.\n",
     "\n",
@@ -187,9 +187,9 @@
    "metadata": {},
    "source": [
     "The result of `ccdmask` is one where there is a defect and zero where the chip\n",
-    "is good, which matches the format of the mask numpy expects.\n",
+    "is good, which matches the format of the mask NumPy expects.\n",
     "\n",
-    "The input image and derived mask are shown below"
+    "The input image and derived mask are shown below:"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Displaying the flat we used and the mask side-by-side demonstrates that the\n",
+    "Displaying the flat we used and the mask side by side demonstrates that the\n",
     "defects which are clear in the flat are picked up in the mask."
    ]
   },
