copy edit ccd notebook 08-03

--- a/notebooks/08-03-Cosmic-ray-removal.ipynb
+++ b/notebooks/08-03-Cosmic-ray-removal.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Removal from calibration images\n",
     "\n",
-    "The easiest way to remove cosmic rays from calibration images (bias, dark and\n",
+    "The most convenient way to remove cosmic rays from calibration images (bias, dark, and\n",
     "flat images) is to combine them properly. Cosmic rays are, by their nature,\n",
     "random events that will affect different parts of each of the calibration\n",
     "images. A pixel affected by a cosmic ray in one of the dark images, for example,\n",
@@ -59,7 +59,7 @@
     "rays you should cite both the original paper and\n",
     "[Astro-SCRAPPY](https://github.com/astropy/astroscrappy) (citation details are on its web site). The\n",
     "code below never directly imports [Astro-SCRAPPY](https://github.com/astropy/astroscrappy) because\n",
-    "ccdproc provides a wrapper for it, so we called attention to it here."
+    "`ccdproc` provides a wrapper for it, so we called attention to it here."
    ]
   },
   {
@@ -79,7 +79,7 @@
     "rays.\n",
     "4. The noise level in the image needs to be accurately measured.\n",
     "5. The image and the noise have to be in the same units, typically electrons.\n",
-    "1. If there are pixels that are known to be bad (e.g. hot pixels, pixels\n",
+    "1. If there are pixels that are known to be bad (e.g., hot pixels, pixels\n",
     "identified by `ccdmask`) they should be masked out before detecting cosmic rays."
    ]
   },
@@ -132,7 +132,7 @@
     "\n",
     "The image we will use in this notebook is one of the reduced images from Example\n",
     "2 in the previous notebooks. It is an image of the field of the exoplanet\n",
-    "Kelt-16b, taken with a thermo-electrically cooled CCD with read noise of 10$e^-$\n",
+    "KELT-16 b, taken with a thermoelectrically-cooled CCD with read noise of 10$e^-$\n",
     "and gain of $1.5~e^-$/ADU."
    ]
   },
@@ -190,7 +190,7 @@
     "column of pixels on the left side of the image.\n",
     "\n",
     "We read in both of the masks, which are the same for all images, and combine\n",
-    "using logical or."
+    "using logical \"OR.\""
    ]
   },
   {
@@ -236,7 +236,7 @@
     "Excluding these pixels from cosmic ray detection ensures that only cosmic rays\n",
     "are  identified.\n",
     "\n",
-    "The mask is now applied to the image of Kelt 16."
+    "The mask is now applied to the image of KELT-16 b."
    ]
   },
   {
@@ -254,27 +254,27 @@
    "source": [
     "### Running LACosmic\n",
     "\n",
-    "The actual invocation of LACosmic is fairly straightforward. The key parameters\n",
+    "The actual invocation of LACosmic is fairly convenient. The key parameters\n",
     "are `readnoise`, the read noise, and `sigclip`, which determines how far above\n",
     "the background a pixel needs to be to consider it a cosmic ray. There is no\n",
     "hard-and-fast rule for selecting the proper value of `sigclip`. In the original\n",
     "paper a value of 5 is recommended, but for this image it finds several thousand\n",
     "pixels contaminated by cosmic rays. That is not plausible for an image taken\n",
-    "with a camera a thousand feet above sea level.\n",
+    "with a camera 1,000 feet above sea level.\n",
     "\n",
     "Higher values of `sigclip` reduce the number of cosmic rays found. The value\n",
     "used below, 7, seemed to work well for this image, finding a total of roughly 70\n",
     "pixels that are cosmic rays, and a couple dozen candidate cosmic rays that\n",
     "extend across multiple pixels.\n",
     "\n",
-    "The function [`cosmicray_lacosmic`]() from ccdproc returns a new image in which\n",
+    "The function [`cosmicray_lacosmic`]() from `ccdproc` returns a new image in which\n",
     "the mask is `True` for pixels in which a cosmic ray was detected and `False`\n",
     "otherwise. The data in the new image has values in the pixels in which cosmic\n",
     "rays were identified replaced by interpolating the neighboring pixels.\n",
     "\n",
     "We will take a look at the cosmic rays identified by LACosmic in a moment.\n",
     "\n",
-    "Expect the code below to take at a few tens of seconds to run."
+    "Expect the code below to take at least a few tens of seconds to run."
    ]
   },
   {
@@ -334,7 +334,7 @@
     "of them individually would be tedious, at best. It would also presumably be\n",
     "difficult to decide visually if a single pixel tagged as a cosmic ray was\n",
     "actually a cosmic ray, but it would be helpful to look at the larger cosmic\n",
-    "rays, i.e. those that span multiple pixels.\n",
+    "rays (i.e., those that span multiple pixels).\n",
     "\n",
     "To identify those larger cosmic rays we will use the function `detect_sources`\n",
     "from the package [photutils](https://photutils.readthedocs.io), which identifies contiguous\n",
@@ -342,7 +342,7 @@
     "[`detect_sources`]() is intended for detecting extended or stellar  sources in an image it happens to work very well for identifying extended cosmic rays in the mask generated by [`cosmicray_lacosmic`]().\n",
     "\n",
     "The threshold below should be something less than 1 to ensure that only the\n",
-    "masked pixels, i.e. those whose values are 1, are included as sources. The\n",
+    "masked pixels (i.e., those whose values are 1) are included as sources. The\n",
     "number of pixels is the number which must be adjacent (either by edge or by\n",
     "corner) to be considered a source."
    ]
@@ -379,8 +379,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks like about 50% of the pixels marked as cosmic rays are extended over\n",
-    "multiple adjacent pixels"
+    "It looks like about 50% of the pixels marked as cosmic rays are extended over\n",
+    "multiple adjacent pixels."
    ]
   },
   {
@@ -391,7 +391,7 @@
     "cosmic rays:\n",
     "\n",
     "+ Actual cosmic rays.\n",
-    "+ Single hot pixels, i.e. pixels with unusually high dark current.\n",
+    "+ Single hot pixels (i.e., pixels with unusually high dark current).\n",
     "\n",
     "These conclusions are not at all clear from what we have discussed in this\n",
     "notebook so far. They are based on a detailed examination of the images after\n",
@@ -404,7 +404,7 @@
     "display the cosmic ray mask and as many additional comparison images as you\n",
     "would like.\n",
     "\n",
-    "Since one of the images it turns out to be useful to look at in this example is\n",
+    "Since one of the images that turns out to be useful to look at in this example is\n",
     "the combined dark used in calibrating the science image, we load it."
    ]
   },
@@ -447,14 +447,14 @@
    "source": [
     "### Discussion of sample cosmic rays\n",
     "\n",
-    "The first three examples above, labeled \"Cosmic ray 0,\" \"Cosmic ray 1\" and\n",
-    "\"Cosmic ray 14,\" are straightforward; each is actually a cosmic ray.\n",
+    "The first three examples above, labeled \"Cosmic ray 0,\" \"Cosmic ray 1,\" and\n",
+    "\"Cosmic ray 14,\" are clear-cut; each is actually a cosmic ray.\n",
     "\n",
-    "The fourth, \"Cosmic ray 18\", is not a cosmic ray, though it does correspond to a\n",
+    "The fourth, \"Cosmic ray 18,\" is not a cosmic ray, though it does correspond to a\n",
     "defect in the CCD. It is caused by a single  hot pixel (dark current around\n",
     "2$e^-$/sec) that has a  high value in the combined dark frame. When that\n",
     "combined dark is subtracted from the science image it causes a large *negative*\n",
-    "value in the value in the science image which ends up being identified as a\n",
+    "value in the value of the science image which ends up being identified as a\n",
     "cosmic ray."
    ]
   },
@@ -607,16 +607,16 @@
     "the individual hot pixel should be masked, the ones around it do not need to be\n",
     "masked.\n",
     "\n",
-    "The final example, \"Cosmic ray 3,\", looks a lot like a star. It is, in fact, the\n",
-    "after-image of one of the bright stars in the field of Kelt 16b. Bright stars in\n",
-    "the field of view can deposit enough charge that is does not dissipate between\n",
+    "The final example, \"Cosmic ray 3,\" looks a lot like a star. It is, in fact, the\n",
+    "after-image of one of the bright stars in the field of KELT-16 b. Bright stars in\n",
+    "the field of view can deposit enough charge that it does not dissipate between\n",
     "images. Typically the effect can be avoided altogether by \"pre-flashing\" the\n",
     "CCD.\n",
     "\n",
-    "Since one cannot pre-flash after the images have been taken, we are stuck doing\n",
+    "Since you cannot pre-flash after the images have been taken, we are stuck doing\n",
     "the next best thing: masking out this part of the images. The masking should be\n",
-    "done at the stage at which how pixels are being identified because all of these\n",
-    "pixels will be identified as how."
+    "done during the stage at which hot pixels are being identified because all of these\n",
+    "pixels will be identified as hot."
    ]
   }
  ],
