--- a/notebooks/08-05-incorporating-masks-into-calibrated-science-images.ipynb
+++ b/notebooks/08-05-incorporating-masks-into-calibrated-science-images.ipynb
@@ -104,7 +104,7 @@
     "### Combining the masks\n",
     "\n",
     "We combine the masks using a logical \"OR\" since we want to mask out pixels that are\n",
-    "`unit=u.dimensionless_unscaled` bad for any reason."
+    "bad for any reason."
    ]
   },
   {
