--- a/notebooks/01-04-Nonuniform-sensitivity.ipynb
+++ b/notebooks/01-04-Nonuniform-sensitivity.ipynb
@@ -19,7 +19,7 @@
     "attached, and dust on optical elements such as filters, the glass window\n",
     "covering the CCD, and the CCD chip itself can also block some light.\n",
     "\n",
-    "Vingetting and dust can reduce the amount of light reaching the CCD chip while\n",
+    "Vignetting and dust can reduce the amount of light reaching the CCD chip while\n",
     "pixel-to-pixel sensitivity variations affects the counts read from the chip.\n",
     "\n",
     "The code to produce the simulated sensitivity map (aka flat image) is long\n",
