--- a/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
+++ b/notebooks/01-03-Construction-of-an-artificial-but-realistic-image.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "## Add some read noise\n",
     "\n",
-    "Which each of the things we add, we'll write a small function for adding so that\n",
+    "With each of the things we add, we'll write a small function for adding so that\n",
     "it's easier to experiment with different values. Read noise has a Gaussian\n",
     "distribution; the standard deviation of the Gaussian (in counts) is the read\n",
     "noise (in electrons) divided by the gain (in electrons per count). Read noise is\n",
