--- a/notebooks/00-00-Preface.ipynb
+++ b/notebooks/00-00-Preface.ipynb
@@ -68,8 +68,10 @@
     "The following people contributed to this work by making suggestions, testing\n",
     "code, or providing feedback on drafts. We are greatful for their assistance!\n",
     "\n",
+    "+ Simon Conseil\n",
     "+ Lia Corrales\n",
     "+ Kelle Cruz\n",
+    "+ Adam Ginsburg\n",
     "+ Richard Hendricks\n",
     "+ Stuart Littlefair\n",
     "+ Isobel Snellenberger\n",
@@ -167,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
